# uart-to-telnet

./: .gitignore  CMakeLists.txt  build.sh  config.json  flash_m5stack.sh  run_tests.sh  telnet_monitor.sh
.kiro/settings/: c_cpp_properties.json
.kiro/specs/uart-telnet-bridge/: .config.kiro  design.md  requirements.md  tasks.md
include/: PlatformFactory.h  Version.h
include/core/: AutoResponder.h  BridgeController.h  ConfigParser.h  DataModels.h
include/interfaces/: DisplayModule.h  HttpServer.h  StorageModule.h  TelnetServer.h  UartModule.h  WiFiModule.h
platformio/: platformio.ini
platformio/include/core/: ConfigParser.h
platformio/src/: AutoResponder.cpp  BridgeController.cpp  M5ConfigParser.cpp  M5DisplayModule.cpp  M5HttpServer.cpp  M5StorageModule.cpp  M5TelnetServer.cpp  M5UartModule.cpp  M5WiFiModule.cpp  main.cpp
src/: PlatformFactory.cpp  main.cpp
src/core/: AutoResponder.cpp  BridgeController.cpp  ConfigParser.cpp
src/platform/esp32/: CMakeLists.txt  Esp32HttpServer.cpp  Esp32HttpServer.h  Esp32TelnetServer.cpp  Esp32TelnetServer.h  Esp32UartModule.cpp  Esp32UartModule.h  Esp32WiFiModule.cpp  Esp32WiFiModule.h  M5StackDisplayModule.cpp  M5StackDisplayModule.h
src/platform/linux/: CMakeLists.txt  LinuxDisplayModule.cpp  LinuxDisplayModule.h  LinuxHttpServer.cpp  LinuxHttpServer.h  LinuxStorageModule.cpp  LinuxStorageModule.h  LinuxTelnetServer.cpp  LinuxTelnetServer.h  LinuxUartModule.cpp  LinuxUartModule.h  LinuxWiFiStub.cpp  LinuxWiFiStub.h
src/platform/m5stack/: M5ConfigParser.cpp  M5ConfigParser.h  M5DisplayModule.cpp  M5DisplayModule.h  M5HttpServer.cpp  M5HttpServer.h  M5StorageModule.cpp  M5StorageModule.h  M5TelnetServer.cpp  M5TelnetServer.h  M5UartModule.cpp  M5UartModule.h  M5WiFiModule.cpp  M5WiFiModule.h
test/: CMakeLists.txt  TestAutoResponder.cpp  TestBridgeController.cpp  TestConfigParser.cpp  TestHttpHandlers.cpp  TestMain.cpp  TestPlatformFactory.cpp
test/mocks/: MockDisplayModule.h  MockHttpServer.h  MockTelnetServer.h  MockUartModule.h  MockWiFiModule.h
